--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/*header*/
+
 .menu {
     height: 80px;
     background-color: #FFFFFF;
@@ -22,4 +24,21 @@
     font-size: 18px;
     color: #3A404E;
     margin-left: 8px;
+}
+
+.menu__link, .menu__entrar {
+    color: #667085;
+    margin-right: 32px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+
+.menu__btn {
+    color: #FFFFFF;
+    background-color: #8E2424;
+    padding: 10px 18px;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+    border-radius: 8px;
+    font-weight: 500;
+    font-size: 16px;
 }
