--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
+:root {
+    --bordo: #8E2424;
+    --texto: #667085;
+    --titulo: #101828;
+    font-family: 'Inter', sans-serif;
+}
+
 /*header*/
 
 .menu {
     height: 80px;
-    background-color: #FFFFFF;
     display: flex;
     align-items: center;
     padding: 0 7rem;
     justify-content: space-between;
-    font-family: 'Inter', sans-serif;
   }
 
 .menu__lista {
@@ -27,7 +32,7 @@
 }
 
 .menu__link, .menu__entrar {
-    color: #667085;
+    color: var(--texto);
     margin-right: 32px;
     font-size: 16px;
     font-weight: 500;
@@ -35,10 +40,63 @@
 
 .menu__btn {
     color: #FFFFFF;
-    background-color: #8E2424;
+    background-color: var(--bordo);
     padding: 10px 18px;
     box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
     border-radius: 8px;
     font-weight: 500;
     font-size: 16px;
+}
+
+/* cabeçalho */
+
+.cabecalho {
+    padding: 96px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cabecalho__categoria {
+    color: var(--bordo);
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.cabecalho__titulo {
+    color: var(--titulo);
+    font-weight: 600;
+    font-size: 48px;
+}
+
+.cabecalho__texto {
+    color: var(--texto);
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+}
+
+/* metricas */
+
+.metricas {
+    display: flex;
+}
+
+.metricas__numero {
+    font-size: 60px;
+    font-weight: 600;
+    color:  var(--bordo);
+}
+
+.metricas__titulo {
+    font-size: 18px;
+    font-weight: 500;
+    color: var(--titulo);
+}
+
+.metricas__texto {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--texto);
 }
