--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,20 +67,31 @@
     color: var(--titulo);
     font-weight: 600;
     font-size: 48px;
-}
+    line-height: 60px;
+    margin-top: 24px;
+    letter-spacing: -0.02em;
+  }
 
-.cabecalho__texto {
+  .cabecalho__texto {
     color: var(--texto);
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
     text-align: center;
-}
+    width: 49.438rem;
+    margin-top: 36px;
+  }
 
 /* metricas */
 
 .metricas {
     display: flex;
+    padding: 0px 112px 96px;
+    gap: 32px;
+}
+
+.metricas__dados {
+    width: 80%;
 }
 
 .metricas__numero {
@@ -93,6 +104,7 @@
     font-size: 18px;
     font-weight: 500;
     color: var(--titulo);
+    margin-top: 18px;
 }
 
 .metricas__texto {
@@ -100,12 +112,14 @@
     font-weight: 400;
     color: var(--texto);
     line-height: 24px;
+    margin-top: 10px;
 }
 
 /* vagas */
 
 .vagas {
     text-align: center;
+    padding: 96px 0px;
 }
 
 .vagas__anuncio {
@@ -121,10 +135,13 @@
     font-size: 36px;
     font-weight: 600;
     color: var(--titulo);
+    margin-top: 30px;
 }
 
 .vagas__texto {
     font-size: 20px;
     font-weight: 400;
     color: var(--texto);
+    margin-top: 30px;
+    margin-bottom: 60px;
 }
