--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,9 @@
 /* vagas */
 
 .vagas {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 96px 0px;
 }
 
@@ -148,16 +150,23 @@
     margin-bottom: 60px;
 }
 
+.vagas__classificados {
+    width: 55%;
+}
+
 .vagas__area {
     font-size: 20px;
     font-weight: 500;
-    color: var(--titulo)
-  }
+    color: var(--titulo);
+    margin-bottom: 32px;
+    margin-top: 64px;
+}
 
 .vagas__cargo {
     font-size: 18px;
     font-weight: 500;
     color: var(--titulo);
+    margin-bottom: 32px;
 }
 
 .vagas__oferta {
@@ -169,10 +178,22 @@
 .vagas__dados {
     border: 1px solid var(--contornos);
     border-radius: 16px;
+    padding: 24px;
+    margin-bottom: 24px;
+}
+
+.vagas__periodo {
+    margin-right: 24px;
 }
 
 .depoimentos {
     background-color: #C3191908;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    height: 404px;
+    justify-content: center;
 }
 
 .depoimentos__titulo {
@@ -180,43 +201,78 @@
     font-weight: 600;
     color: var(--bordo);
     letter-spacing: -0.02em;
-  }
+    margin-bottom: 25px;
+}
 
-  .depoimentos__relato {
+.depoimentos__relato {
     font-size: 36px;
     font-weight: 500;
     color: var(--titulo);
     letter-spacing: -0.02em;
+    width: 80%;
+}
+
+.depoimentos__img {
+    margin-top: 36px;
+    margin-bottom: 16px;
   }
 
-  .depoimentos__nome {
+.depoimentos__nome {
     font-size: 16px;
     font-weight: 500;
     color: var(--titulo);
-  }
+    margin-bottom: 10px;
+}
 
-  .depoimentos__cargo {
+.depoimentos__cargo {
     font-size: 14px;
     font-weight: 400;
     color: var(--texto);
-  }
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #F9FAFB;
+    height: 430px;
+}
 
 .formulario__titulo {
     font-size: 36px;
     font-weight: 600;
     color: var(--titulo);
     letter-spacing: -0.02em;
+    margin-bottom: 30px;
 }
 
 .formulario__texto {
     font-size: 20px;
     font-weight: 400;
     color: var(--texto);
+    margin-bottom: 45px;
 }
+
+.formulario__cadastro {
+    margin-bottom: 35px;
+  }
 
 .formulario__email {
     border: 1px solid #D0D5DD;
     border-radius: 8px;
+    padding: 12px 96px 12px 16px;
+    margin-right: 16px;
+}
+
+.formulario__btn {
+    color: #FFFFFF;
+    background-color: var(--bordo);
+    padding: 12px 20px;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+    border-radius: 8px;
+    font-weight: 500;
+    font-size: 16px;
 }
 
 .formulario__dr {
